--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html2canvas-pro": "^1.6.3",
     "lucide-react": "^0.561.0",
     "posthog-js": "^1.309.1",
     "react": "^19.2.0",
